SONAR-5851 add profile details, implement profile actions

--- a/sonar-core/src/main/resources/org/sonar/l10n/core.properties
+++ b/sonar-core/src/main/resources/org/sonar/l10n/core.properties
@@ -1765,10 +1765,11 @@ quality_profiles.remove_project_confirm_button=Remove
 quality_profiles.remove_projects_confirm_title=Remove All Projects from Profile
 quality_profiles.remove_projects_confirm_message=Are you sure that you want to dissociate all the projects from this profile? The default profile will be used during next analysis of these projects.
 quality_profiles.remove_projects_confirm_button=Remove All
-quality_profiles.copy_x_title=Copy Profile {0}
+quality_profiles.copy_x_title=Copy Profile {0} - {1}
 quality_profiles.copy_new_name=New name
 quality_profiles.copy_overwrite_x=You are about to copy this quality profile into the existing "{0}" profile, which will fully overwrite it. Please confirm the name if you want to overwrite, or choose another name.
 quality_profiles.copy_x_overwritten=Profile '{0}' has been overwritten.
+quality_profiles.rename_x_title=Rename Profile {0} - {1}
 quality_profiles.restore_built_in_profiles=Restore Built-in Profiles
 quality_profiles.restore_built_in_profiles_confirmation=Are you sure you want to restore "{0}" profile(s) for {1}?
 quality_profiles.including=including
@@ -1785,6 +1786,9 @@ quality_profiles.changelog.deactivated=Deactivated
 quality_profiles.changelog.updated=Updated
 quality_profiles.changelog.parameter_reset_to_default_value_x=Parameter <b>{0}</b> reset to default value
 quality_profiles.deleted_profile=The profile {0} doesn't exists anymore
+quality_profiles.projects_for_default=Every project not specifically associated to a quality profile will be associated to this one by default.
+quality_profiles.projects_for_default.edit=You must not select specific projects for the default quality profile.
+
 
 
 #------------------------------------------------------------------------------
